--- a/src/app/modules/main/content/components/projects/projects.component.html
+++ b/src/app/modules/main/content/components/projects/projects.component.html
@@ -18,16 +18,18 @@
               <div class="w-full flex bg-gray-100 font-bold text-xs text-gray-800 py-3 px-4 rounded-t-md">
                 <div class="w-3/12">Project Name</div>
                 <div class="w-3/12">Client</div>
-                <div class="w-3/12">Team Members</div>
-                <div class="w-3/12">Actions</div>
+                <div class="w-2/12">Team Members</div>
+                <div class="w-2/12">Project Manager</div>
+                <div class="w-2/12">Actions</div>
               </div>
 
               <!-- Content -->
               <div class="w-full flex border-b border-gray-100 p-3 items-center" *ngFor="let project of projectsList">
                 <div class="w-3/12 cursor-pointer hover:text-blue-600" [routerLink]="[project._id]">{{project.projectName}}</div>
-                <div class="w-3/12">{{project.clientId}}</div>
-                <div class="w-3/12">{{project.teamMembers.length}} Members</div>
-                <div class="w-3/12">
+                <div class="w-3/12">{{filterRequiredIds('client', project.clientId)}}</div>
+                <div class="w-2/12">{{project.teamMembers.length}} <span class="text-xs">Members</span></div>
+                <div class="w-2/12">{{filterRequiredIds('member', project.projectManagerId)}}</div>
+                <div class="w-2/12">
                   <button mat-icon-button>
                     <mat-icon>more_vert</mat-icon>
                   </button>
