--- a/src/app/modules/main/content/components/projects/projects.component.html
+++ b/src/app/modules/main/content/components/projects/projects.component.html
@@ -28,7 +28,7 @@
                 <div class="w-3/12 cursor-pointer hover:text-blue-600" [routerLink]="[project._id]">{{project.projectName}}</div>
                 <div class="w-3/12">{{filterRequiredIds('client', project.clientId)}}</div>
                 <div class="w-2/12">{{project.teamMembers.length}} <span class="text-xs">Members</span></div>
-                <div class="w-2/12">{{filterRequiredIds('member', project.projectManagerId)}}</div>
+                <div class="w-2/12">{{project?.projectManagerDetails ? (project?.projectManagerDetails?.firstName + ' ' + project?.projectManagerDetails.lastName) : ''}}</div>
                 <div class="w-2/12">
                   <button mat-icon-button>
                     <mat-icon>more_vert</mat-icon>
@@ -37,7 +37,7 @@
               </div>
 
               <!-- Project List not present -->
-              <div class="w-full p-10 text-center italic text-gray-500" *ngIf="!projectsList.length">** Projects Not Added. **</div>
+              <div class="w-full p-10 text-center italic text-gray-500" *ngIf="!projectsList?.length">** Projects Not Added. **</div>
             </div>
         </div>
         
